--- a/index.html
+++ b/index.html
@@ -15,11 +15,18 @@
         <div class="pg1">
                  <img class="oasislogo"src="https://bits-oasis.org/images/logo_final.png">
                  <div class="header">
-                  <ul>
-                      <a href="#pg2"><li class="nav">About Us</li></a>
-                      <a href="#pg3"><li class="nav">Procedure</li></a>
-                      <a href="#pg4"><li class="nav">Contact Us</li></a>
-                      <a href=""><li class="nav">Register</li></a>
+
+                        <input type="checkbox" />
+    
+                      
+                        <span></span>
+                        <span></span>
+                        <span></span>
+                  <ul id="menu">
+                      <a href="#pg2" style="text-decoration: none;"><li class="nav">About Us</li></a>
+                      <a href="#pg3" style="text-decoration: none;"><li class="nav">Procedure</li></a>
+                      <a href="#pg4" style="text-decoration: none;"><li class="nav">Contact Us</li></a>
+                      <a href="" style="text-decoration: none;"><li class="nav">Register</li></a>
                     </ul>
                   </div>
         <div class="rocktaves">
