--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>
-       rocktaves2019
+       Rocktaves '19
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
@@ -13,7 +13,7 @@
 <body></body>
         
         <div class="pg1">
-                 <img class="oasislogo"src="https://bits-oasis.org/images/logo_final.png">
+                 <a href="https://bits-oasis.org"><img class="oasislogo"src="https://bits-oasis.org/images/logo_final.png"></a>
                  <div class="header">
 
                         <input type="checkbox" />
@@ -90,7 +90,7 @@
            <div class="blank1"></div>  
             <div class="round2">
                 <div class="round2content">
-                        <p>The winners of each city and region will then be called for finals at BITS Pilani for the final
+                        <p>The winners of each city and region will then be called for finals at <b>BITS Pilani </b>for the final
                             prize and the crown of Rocktaves winner. The rules for the same will be updated shortly.</p>
                         <p><strong>We have no registration fee.</strong></p></div>        
                 <div class="round2head2">2</div>
@@ -102,11 +102,8 @@
         <div class="pg4" id="pg4">
                 <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
                 <div class="contact">
-                    <div class="image"><div class="img"></div></div>
                     <div class="details">NAME<br> CONTACT</div>
-                </div>  
-                <div class="contact">
-                     <div class="image"><div class="img"></div></div>
+
                     <div class="details">NAME <br>CONTACT</div>
                 </div>  
             </div>
