--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                 <div class="procedure">
                 <!--    <span class="procedurehead">The competition will take place in two rounds:</span>-->
                         <ul class="procedurecont">
-                            <li>Round 1 - Physical and online elimination</li>
+                            <li>Round 1 - Physical and online elimination</li><br>
                             <li>Round 2 - Finals at BITS Pilani</li>
                             </ul>
                 </div> 
