--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                 <!--    <span class="procedurehead">The competition will take place in two rounds:</span>-->
                         <ul class="procedurecont">
                             <li>Round 1 - Physical and online elimination</li><br>
-                            <li>Round 2 - Finals at BITS Pilani</li>
+                            <li>Round 2 - Finals at BITS Pilani</li><br>
                             </ul>
                 </div> 
             <div class="round1">
