--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         </div>
         <div class="pg4" id="pg4">
-                <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
+                <div class="contactushead"><span style="border-bottom: solid 2px black;">CONTACT US</span></div>
                 <div class="contact">
                     <div class="details">Aarnav: <a href="tel:+918976417142" style="text-decoration: none">+918976417142</a></div>
                 </div>  
@@ -124,8 +124,11 @@
                 }
                 function uncheck()
                 {
+                    if(window.innerWidth < 800 )
+                    {
                     check.checked=false;
                     checked();
+                    }
                 }
             </script>
     </body>
