--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       <a href="" style="text-decoration: none;"><li class="nav">Register</li></a>
                     </ul>
                   </div>
-        <div class="rocktaves">
+        <div class="rocktaves" style="top:-2vh;">
             <h1>ROCKTAVES</h1>
             <h1>ROCKTAVES</h1>
             <h1>ROCKTAVES</h1>
@@ -100,9 +100,9 @@
         </div>
         </div>
         <div class="pg4" id="pg4">
-                <div class="contactushead"><span style="border-bottom: solid 2px black;">CONTACT US</span></div>
+                <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
                 <div class="contact">
-                    <div class="details">Aarnav: <a href="tel:+918976417142" style="text-decoration: none">+918976417142</a></div>
+                    <div class="details">Aarnav : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+918976417142</a></div>
                 </div>  
             </div>
             <script>
