--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="aboutushead"><span style="border-bottom: solid 2px white;">ABOUT US</span></div>
         <div class="aboutuscont">One of the oldest band competition in India which has acted as a springboard for India’s premiere rock groups of the stature of Parikrama, Indian Ocean, Superfuzz, PRESTORIKA, Them Clones and Euphoria who have taken part in the competition at different points in its history.</div>
         <div class="video">
-            <iframe width="560" height="315" src="https://www.youtube.com/embed/0AlBafi2NiQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe src="https://www.youtube.com/embed/0AlBafi2NiQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     <div class="pg3" id="pg3">
