--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                       <a href="" style="text-decoration: none;"><li class="nav">Register</li></a>
                     </ul>
                   </div>
-        <div class="rocktaves" style="top:-2vh;">
+        <div class="rocktaves" style="margin-top: -4vh;">
             <h1>ROCKTAVES</h1>
             <h1>ROCKTAVES</h1>
             <h1>ROCKTAVES</h1>
