--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                       <a href="#pg2" style="text-decoration: none;"><li class="nav" onclick="uncheck()">About Us</li></a>
                       <a href="#pg3" style="text-decoration: none;"><li class="nav" onclick="uncheck()">Procedure</li></a>
                       <a href="#pg4" style="text-decoration: none;"><li class="nav" onclick="uncheck()">Contact Us</li></a>
-                      <a href="" style="text-decoration: none;"><li class="nav">Register</li></a>
+                      <a href="https://bits-oasis.org/" style="text-decoration: none;"><li class="nav">Register</li></a>
                     </ul>
                   </div>
         <div class="rocktaves" style="margin-top: -4vh;">
