--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                       <a href="#pg2" style="text-decoration: none;"><li class="nav" onclick="uncheck()">About Us</li></a>
                       <a href="#pg3" style="text-decoration: none;"><li class="nav" onclick="uncheck()">Procedure</li></a>
                       <a href="#pg4" style="text-decoration: none;"><li class="nav" onclick="uncheck()">Contact Us</li></a>
-                      <a href="https://bits-oasis.org/" style="text-decoration: none;"><li class="nav">Register</li></a>
+                      <a href="https://bits-oasis.org/" target="_blank" style="text-decoration: none;"><li class="nav">Register</li></a>
                     </ul>
                   </div>
         <div class="rocktaves" style="margin-top: -4vh;">
@@ -102,7 +102,7 @@
         <div class="pg4" id="pg4">
                 <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
                 <div class="contact">
-                    <div class="details">Aarnav : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+918976417142</a></div>
+                    <div class="details">Aarnav Dhanuka : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+918976417142</a><br /><br />Shrivas Chaterjee : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+91-9493721135</a></div>
                 </div>  
             </div>
             <script>
@@ -132,4 +132,4 @@
                 }
             </script>
     </body>
-    </html> 
+    </html>
