--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
             <h1>ROCKTAVES</h1>
                 </div>
         <div class="icons">
-        <span class="follow">Follow us on :</span>
-        <a href="https://www.facebook.com/rocktaves/"><i class="fa fa-facebook"></i></a>
+        <span class="follow">Follow us on </span>
+        <a href="https://www.facebook.com/rocktaves/"><i class="fa fa-facebook" ></i></a>
         <a href="https://www.instagram.com/rocktaves.bits/"><i class="fa fa-instagram"></i></a>
          </div>
     </div>
