--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
        Rocktaves '19
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./rocktaves2019.css">
 </head>
 <body id="body">
@@ -15,15 +15,15 @@
         <div class="pg1">
                  <a href="https://bits-oasis.org"><img class="oasislogo"src="./logo_final.png"></a>
                  <div class="header">
-                        <input type="checkbox" id="mycheck">
+                        <input type="checkbox" id="mycheck" >
                         <span></span>
                         <span></span>
                         <span></span>
                   <ul id="menu">
-                      <a href="#pg2" style="text-decoration: none;"><li class="nav" onclick="uncheck()">About Us</li></a>
-                      <a href="#pg3" style="text-decoration: none;"><li class="nav" onclick="uncheck()">Procedure</li></a>
-                      <a href="#pg4" style="text-decoration: none;"><li class="nav" onclick="uncheck()">Contact Us</li></a>
-                      <a href="https://bits-oasis.org/" target="_blank" style="text-decoration: none;"><li class="nav">Register</li></a>
+                      <a href="#pg2" style="text-decoration: none;" class="nav"><li class="links" onclick="uncheck()">About Us</li></a>
+                      <a href="#pg3" style="text-decoration: none;" class="nav"><li class="links"onclick="uncheck()">Procedure</li></a>
+                      <a href="#pg4" style="text-decoration: none;"class="nav"><li class="links" onclick="uncheck()">Contact Us</li></a>
+                      <a href="https://bits-oasis.org" target="_blank" style="text-decoration: none;" class="nav" ><li class="links" onclick="uncheck()">Register</li></a>
                     </ul>
                   </div>
         <div class="rocktaves" style="margin-top: -4vh;">
@@ -32,8 +32,8 @@
             <h1>ROCKTAVES</h1>
                 </div>
         <div class="icons">
-        <span class="follow">Follow us on:</span>
-        <a href="https://www.facebook.com/rocktaves/"><i class="fa fa-facebook"></i></a>
+        <span class="follow">Follow us on </span>
+        <a href="https://www.facebook.com/rocktaves/"><i class="fa fa-facebook" ></i></a>
         <a href="https://www.instagram.com/rocktaves.bits/"><i class="fa fa-instagram"></i></a>
          </div>
     </div>
@@ -102,29 +102,30 @@
         <div class="pg4" id="pg4">
                 <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
                 <div class="contact">
-                    <div class="details">Aarnav Dhanuka : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+918976417142</a><br /><br />Shrivas Chaterjee : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+91-9493721135</a></div>
+                    <div class="details">Aarnav Dhanuka : <a href="tel:+918976417142" style="text-decoration: none; color:rgb(0, 0, 0); ">+918976417142</a><br /><br />Shrivas Chaterjee : <a href="tel:+918976417142" style="text-decoration: none; color:black; ">+91-9493721135</a></div>
                 </div>  
             </div>
             <script>
                 
-                var check = document.getElementById("mycheck");
+               var check = document.getElementById("mycheck");
                check.addEventListener("click",checked);
                 function checked()
                 {
                     if(check.checked)
                     {
                         document.getElementById("body").style = "overflow-y:hidden";
-                        document.getElementById("menu").style = "display:block";
+                        document.getElementById("menu").style = "transition: transform 0.8s; transform: translateY(110vh);" ;
                     }
                     else
                     {
-                        document.getElementById("body").style = "overflow-y:visible"; 
-                        document.getElementById("menu").style = "display:none";          
+                        document.getElementById("body").style = "overflow-y:visible";
+                        document.getElementById("menu").style = " transition: transform 0.8s; transform: translateY(-110vh);";
+                         
                     }
                 }
                 function uncheck()
                 {
-                    if(window.innerWidth < 800 )
+                    if(window.innerWidth < 800)
                     {
                     check.checked=false;
                     checked();
@@ -132,4 +133,4 @@
                 }
             </script>
     </body>
-    </html>
+    </html> 
