--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         </div>
         </div>
         <div class="pg4" id="pg4">
-                <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
+                <div class="contactushead"><span style="border-bottom: solid 2px black;">CONTACT US</span></div>
                 <div class="contact">
                     <div class="details">Aarnav Dhanuka : <a href="tel:+918976417142" style="text-decoration: none; color:rgb(0, 0, 0); ">+91-8976417142</a><br /><br />Shrivas Chaterjee : <a href="tel:+918976417142" style="text-decoration: none; color:black; ">+91-9493721135</a></div>
                 </div>  
