--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
        Rocktaves '19
     </title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="https://use.typekit.net/rhu5zcl.css">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./rocktaves2019.css">
 </head>
 <body id="body">
@@ -33,21 +33,21 @@
             <h1>ROCKTAVES</h1>
                 </div>
         <div class="icons">
-        <span class="follow">Follow us on:</span>
-        <a href="https://www.facebook.com/rocktaves/"><i class="fa fa-facebook"></i></a>
+        <span class="follow">Follow us on </span>
+        <a href="https://www.facebook.com/rocktaves/"><i class="fa fa-facebook" ></i></a>
         <a href="https://www.instagram.com/rocktaves.bits/"><i class="fa fa-instagram"></i></a>
          </div>
     </div>
     
     <div class="pg2" id="pg2">
-        <div class="aboutushead"><span style="border-bottom: solid 2px white;">ABOUT US</span></div>
+        <div class="aboutushead"><span style="border-bottom: solid 1px white;">ABOUT US</span></div>
         <div class="aboutuscont">One of the oldest band competition in India which has acted as a springboard for India’s premiere rock groups of the stature of Parikrama, Indian Ocean, Superfuzz, PRESTORIKA, Them Clones and Euphoria who have taken part in the competition at different points in its history.</div>
         <div class="video">
             <iframe src="https://www.youtube.com/embed/0AlBafi2NiQ" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         </div>
     </div>
     <div class="pg3" id="pg3">
-            <div class="roundshead"><span style="border-bottom: solid 2px black;">PROCEDURE</span></div>
+            <div class="roundshead"><span style="border-bottom: solid 1.5px black;">PROCEDURE</span></div>
                 <div class="procedure">
                 <!--    <span class="procedurehead">The competition will take place in two rounds:</span>-->
                         <ul class="procedurecont">
@@ -101,9 +101,9 @@
         </div>
         </div>
         <div class="pg4" id="pg4">
-                <div class="contactushead"><span style="border-bottom: solid 2px white;">CONTACT US</span></div>
+                <div class="contactushead"><span style="border-bottom: solid 1.5px black;">CONTACT US</span></div>
                 <div class="contact">
-                    <div class="details">Aarnav Dhanuka : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+918976417142</a><br /><br />Shrivas Chaterjee : <a href="tel:+918976417142" style="text-decoration: none; color:white; ">+91-9493721135</a></div>
+                    <div class="details">Aarnav Dhanuka : <a href="tel:+918976417142" style="text-decoration: none; color:rgb(0, 0, 0); ">+91-8976417142</a><br /><br />Shrivas Chaterjee : <a href="tel:+918976417142" style="text-decoration: none; color:black; ">+91-9493721135</a></div>
                 </div>  
             </div>
             <script>
@@ -115,12 +115,12 @@
                     if(check.checked)
                     {
                         document.getElementById("body").style = "overflow-y:hidden";
-                        document.getElementById("menu").style = "transition: transform 0.8s; transform: translateY(110vh);" ;
+                        document.getElementById("menu").style = "transition: transform 0.3s; transform: translateY(110vh);" ;
                     }
                     else
                     {
                         document.getElementById("body").style = "overflow-y:visible";
-                        document.getElementById("menu").style = " transition: transform 0.8s; transform: translateY(-110vh);";
+                        document.getElementById("menu").style = " transition: transform 0.3s; transform: translateY(-110vh);";
                          
                     }
                 }
